Get rid of few more BFiniteType.getValueSpace() usages